--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -98,9 +98,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    
     "\n",
-    "# %pip install -U pyautogen\n"
-    "# %pip install -U openai\n"
+    "# %pip install -U pyautogen\n",
+    "# %pip install -U openai\n",
     "\n",
     "# Change the seed for different trials. Set to `None` for a different answer each time\n",
     "CACHE_SEED = 4267\n",
