--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -7,12 +7,12 @@
     "# Webpage Creator\n",
     "\n",
     "Tasks:\n",
-    "* Try different ideas for a webpage.\n",
+    "* Try different ideas for a webpage. There are few ideas defined in the tasks below for reference.\n Brainstorm the ideas to develop a website with details you would like to add to.\n Revisit the images folder if you have all required images to be added, you can download additional images from internet.",
     "* See the difference with and without the content writer.\n",
     "\n",
     "Extension:\n",
-    "* Download images off the internet, place it within the 'coding' folder, and tell Autogen to use those images.\n",
-    "* Does the order of the agents matter? (i.e. who speaks first)\n"
+    "* Make sure the downloaded images off the internet are placed under 'coding\images' folder, and tell Autogen to use those images.\n",
+ 
    ]
   },
   {
