--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -7,7 +7,7 @@
     "# Webpage Creator\n",
     "\n",
     "Tasks:\n",
-    "* Try different ideas for a webpage. There are few ideas defined in the tasks below for reference.\n Brainstorm the ideas to develop a website with details you would like to add to.\n Revisit the images folder if you have all required images to be added, you can download additional images from internet.",
+    "* Try different ideas for a webpage. There are few ideas defined in the tasks below for reference.\n Brainstorm the ideas to develop a website with details you would like to add to.\n Revisit the images folder if you have all required images to be added, you can download additional images from internet.\n",
     "* See the difference with and without the content writer.\n",
     "\n",
     "Extension:\n",
