--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -11,7 +11,7 @@
     "* See the difference with and without the content writer.\n",
     "\n",
     "Extension:\n",
-    "* Make sure the downloaded images off the internet are placed under 'coding\images' folder, and tell Autogen to use those images.\n",
+    "* Make sure the downloaded images off the internet are placed under 'coding\\images' folder, and tell Autogen to use those images.\n",
  
    ]
   },
