--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -1,4 +1,4 @@
-{
+
  "cells": [
   {
    "cell_type": "markdown",
@@ -7,12 +7,12 @@
     "# Webpage Creator\n",
     "\n",
     "Tasks:\n",
-    "* Try different ideas for a webpage. There are few ideas defined in the tasks below for reference.\n Brainstorm the ideas to develop a website with details you would like to add to.\n Revisit the images folder if you have all required images to be added, you can download additional images from internet.\n",
+    "* Brainstorm about the ideas to webpage to build (e.g Pizza store, Gaming, Cooking ect)​ and Prepare the prompt​\n",
+    "* Revisit the images folder if you have all required images to be added, you can download additional images from internet.\n",
     "* See the difference with and without the content writer.\n",
     "\n",
     "Extension:\n",
-    "* Make sure the downloaded images off the internet are placed within images folder under 'coding' folder, and tell Autogen to use those images.\n",
- 
+    "* Make sure the downloaded images off the internet are placed within coding/images folder, and tell Autogen to use those images.\\"
    ]
   },
   {
