--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -12,7 +12,7 @@
     "* See the difference with and without the content writer.\n",
     "\n",
     "Extension:\n",
-    "* Make sure the downloaded images off the internet are placed within coding/images folder, and tell Autogen to use those images.\\"
+    "* Make sure the downloaded images off the internet are placed within images folder under coding folder, and tell Autogen to use those images."
    ]
   },
   {
