--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -17,22 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "task: str = \"\"\"Make a website about cars.\n",
-    "Homepage\n",
-    "Welcome to SuperCars.com: Discover the latest news, reviews, and insights on all things cars. Whether you're a car enthusiast or just looking for your next ride, we've got you covered.\n",
-    "About Us\n",
-    "Car Reviews\n",
-    "Latest Car Reviews: Dive into detailed reviews of the newest models on the market. Find out what makes each car unique and whether it's the right fit for you.\n",
-    "Car News\n",
-    "Automotive News: Stay updated with the latest happenings in the car industry. From new releases to technological advancements, get all the news here.\n",
-    "Buying Guides\n",
-    "Car Buying Guides: Need help choosing your next car? Check out our buying guides for tips and advice on finding the perfect vehicle for your needs and budget.\n",
-    "Contact Us\n",
-    "Get in Touch: Have questions or feedback? Reach out to us through our contact form, and we'll be happy to assist you.\n",
+    "task: str = \"\"\"\\\n",
+    "\n",
+    "A website about cars.\n",
+    "\n",
     "\"\"\"\n",
     "# task: str = \"Make a website about coffee.\"\n",
     "# task: str = \"Make a website about animals, such as the zoo or a safari or anything else.\"\n",
@@ -98,7 +90,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    
     "\n",
     "# %pip install -U pyautogen\n",
     "# %pip install -U openai\n",
@@ -320,12 +311,14 @@
    "outputs": [],
    "source": [
     "\n",
-    "imageprompt = f\"consering the provided task '{task}', I would like to have an image or logo to best describe about my task to add to home page. Please create an image.\""
+    "image_prompt = f\"\"\"\\\n",
+    "A website background for: {task}\n",
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,37 +330,41 @@
     "model = \"dall-e-3\"\n",
     "\n",
     " # Generate an image based on the prompt\n",
-    "response = client.images.generate(prompt=imageprompt, model=model,quality=\"standard\", response_format=\"b64_json\", size=\"1024x1024\")\n",
+    "response = client.images.generate(prompt=image_prompt, model=model,quality=\"standard\", response_format=\"b64_json\", size=\"1024x1024\")\n",
     "\n",
     "img_data =  response.data[0].b64_json\n",
     "img_bytes = base64.b64decode(img_data)\n",
     "\n",
-    "with open('coding/images/background.png', 'wb') as handler:\n",
+    "with open(os.path.join('coding', 'images', 'background.png'), 'wb') as handler:\n",
     "    handler.write(img_bytes)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Find images that can be used\n",
-    "image_filenames = [\"images/\" + image\n",
-    "                   for image in os.listdir(\"coding/images\")\n",
+    "image_filenames = [os.path.join(\"images\", image)\n",
+    "                   for image in os.listdir(os.path.join(\"coding\", \"images\"))\n",
     "                   if image.endswith((\".jpg\", \".jpeg\", \".png\"))]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "system_prompt: str = f\"\"\"\\\n",
     "Make a modern-looking and responsive HTML website for the client.\n",
     "\n",
-    "Client's request: {task}\n",
+    "Client's request:\n",
+    "\n",
+    "```\n",
+    "{task.strip()}\n",
+    "```\n",
     "\"\"\"\n",
     "\n",
     "images_list_str = '\\n'.join(image_filenames)\n",
@@ -444,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "webpage_path: str = \"coding/my_webpage.html\"\n",
+    "webpage_path: str = os.path.join(\"coding\", \"my_webpage.html\")\n",
     "\n",
     "with open(webpage_path, \"w\") as f:\n",
     "    f.write(webpage_content)\n",
@@ -460,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -475,13 +472,17 @@
     }
    ],
    "source": [
+    "# Open webpage in browser\n",
+    "import webbrowser\n",
+    "webbrowser.open(webpage_path, new=1)\n",
+    "\n",
     "# Alternate method to open webpage in browser\n",
-    "import os\n",
-    "os.system(f\"open {webpage_path}\")\n",
+    "# import os\n",
+    "# os.system(f\"open {webpage_path}\")\n",
     "\n",
     "# Alternate method 2 to open webpage in browser\n",
     "# import subprocess\n",
-    "# subprocess.run([\"open\", webpage_path])"
+    "# subprocess.run([\"open\", webpage_path])\n"
    ]
   },
   {
