Refine webpage creation tasks for clarity and conciseness

--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Webpage Creator\n",
     "\n",
-    "Tasks:\n",
-    "* Brainstorm about the ideas to webpage to build (e.g Pizza store, Gaming, Cooking ect)​ and Prepare the prompt​\n",
-    "* Revisit the images folder if you have all required images to be added, you can download additional images from internet.\n",
-    "* See the difference with and without the content writer.\n",
+    "Task:\n",
+    "* Brainstorm ideas for webpages to build (e.g Pizza store, Gaming, Cooking etc)​.\n",
+    "* Prepare the `task` prompt​ with your idea.\n",
+    "* Run the code, and see your webpage!\n",
     "\n",
     "Extension:\n",
-    "* Make sure the downloaded images off the internet are placed within images folder under coding folder, and tell Autogen to use those images."
+    "* Make sure the downloaded images off the internet are placed within `images` folder under `coding` folder, and tell Autogen to use those images.\n"
    ]
   },
   {
