Refine content evaluation criteria and improve prompt clarity in Webpage.ipynb

--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -67,13 +67,12 @@
     "- Layout (layout): Is the layout of the webpage appropriate? Is the webpage responsive? Does it look good on mobile devices?\n",
     "- Aesthetics (aesthetics): Is the webpage visually appealing? Does it have a good color scheme? Does it have a good font? Does it have a good use of whitespace? If there is no CSS, then mark this as 0.\n",
     "- Images (images): Do images have a max-width so that they do not take up too much space? Make sure that `max-width: 50%` is the largest an image can be.\n",
+    "- Content (content): Suggest improvements to the content. Are more sections needed? Is it worded well?\n",
     "\n",
     "YOU MUST PROVIDE A SCORE for each of the above dimensions.\n",
     "{bugs: 0, compliance: 0, aesthetics: 0, layout: 0, images: 0, navigation: 0}\n",
     "Do not suggest code.\n",
     "Finally, based on the critique above, suggest a concrete list of actions that the coder should take to improve the code.\n",
-    "\n",
-    "You may also provide ideas for how the content could be improved.\n",
     "\"\"\""
    ]
   },
@@ -295,7 +294,7 @@
    "source": [
     "\n",
     "image_prompt = f\"\"\"\\\n",
-    "A website background for: {task}\n",
+    "Light, scenic, background for the website: {task}\n",
     "\"\"\"\n"
    ]
   },
@@ -341,7 +340,7 @@
    "outputs": [],
    "source": [
     "system_prompt: str = f\"\"\"\\\n",
-    "Make a modern-looking and responsive HTML website for the client.\n",
+    "Build a responsive HTML website for the client.\n",
     "\n",
     "Client's request:\n",
     "\n",
