Refactor llm_config to use inline configuration and set CACHE_SEED and TEMPERATURE directly

--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -94,12 +94,6 @@
     "# %pip install -U pyautogen\n",
     "# %pip install -U openai\n",
     "\n",
-    "# Change the seed for different trials. Set to `None` for a different answer each time\n",
-    "CACHE_SEED = None\n",
-    "\n",
-    "# Temperature for sampling\n",
-    "TEMPERATURE: int = 0\n",
-    "\n",
     "# Maximum number of messages in the chat\n",
     "MAX_MESSAGES: int = 10"
    ]
@@ -153,21 +147,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Configuration for Autogen's inference API\n",
-    "llm_config: dict = {\n",
-    "    \"config_list\": config_list,\n",
-    "    \"cache_seed\": CACHE_SEED,\n",
-    "    \"temperature\": TEMPERATURE,\n",
-    "    \"timeout\": 600,\n",
-    "}"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -193,7 +172,12 @@
     "coder = AssistantAgent(\n",
     "    name=\"Coder\",\n",
     "    system_message=coder_system_message,\n",
-    "    llm_config=llm_config,\n",
+    "    llm_config={\n",
+    "        \"config_list\": config_list,\n",
+    "        \"cache_seed\": None,\n",
+    "        \"temperature\": 0.0,\n",
+    "        \"timeout\": 600,\n",
+    "    },\n",
     ")\n",
     "\n",
     "agents.append(coder)\n"
@@ -208,7 +192,12 @@
     "critic = AssistantAgent(\n",
     "    name=\"Critic\",\n",
     "    system_message=critic_system_message,\n",
-    "    llm_config=llm_config,\n",
+    "    llm_config={\n",
+    "        \"config_list\": config_list,\n",
+    "        \"cache_seed\": None,\n",
+    "        \"temperature\": 0.2,\n",
+    "        \"timeout\": 600,\n",
+    "    },\n",
     ")\n",
     "\n",
     "agents.append(critic)"
