Update scoring criteria and enhance llm_config parameters in Webpage.ipynb

--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -70,9 +70,11 @@
     "- Content (content): Suggest improvements to the content. Are more sections needed? Is it worded well?\n",
     "\n",
     "YOU MUST PROVIDE A SCORE for each of the above dimensions.\n",
-    "{bugs: 0, compliance: 0, aesthetics: 0, layout: 0, images: 0, navigation: 0}\n",
+    "{bugs: 0, compliance: 0, navigation: 0, layout: 0, aesthetics: 0, images: 0, content: 0}\n",
     "Do not suggest code.\n",
     "Finally, based on the critique above, suggest a concrete list of actions that the coder should take to improve the code.\n",
+    "\n",
+    "After your scores and rationale, provide enhancements to the content that can be made.\n",
     "\"\"\""
    ]
   },
@@ -175,7 +177,7 @@
     "    llm_config={\n",
     "        \"config_list\": config_list,\n",
     "        \"cache_seed\": None,\n",
-    "        \"temperature\": 0.0,\n",
+    "        \"temperature\": 0.1,\n",
     "        \"timeout\": 600,\n",
     "    },\n",
     ")\n",
@@ -195,7 +197,7 @@
     "    llm_config={\n",
     "        \"config_list\": config_list,\n",
     "        \"cache_seed\": None,\n",
-    "        \"temperature\": 0.2,\n",
+    "        \"temperature\": 0.3,\n",
     "        \"timeout\": 600,\n",
     "    },\n",
     ")\n",
@@ -264,7 +266,12 @@
     "    name=\"chat_manager\",\n",
     "    groupchat=groupchat,\n",
     "    is_termination_msg=is_termination_msg,\n",
-    "    llm_config=llm_config,\n",
+    "    llm_config={\n",
+    "        \"config_list\": config_list,\n",
+    "        \"cache_seed\": None,\n",
+    "        \"temperature\": 0.2,\n",
+    "        \"timeout\": 600,\n",
+    "    },\n",
     ")\n"
    ]
   },
