Images are generated dynamically

--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -9,38 +9,32 @@
     "Task:\n",
     "* Brainstorm ideas for webpages to build (e.g Pizza store, Gaming, Cooking etc)​.\n",
     "* Prepare the `task` prompt​ with your idea.\n",
-    "* Run the code, and see your webpage!\n",
-    "\n",
-    "Extension:\n",
-    "* Make sure the downloaded images off the internet are placed within `images` folder under `coding` folder, and tell Autogen to use those images.\n"
+    "* Run the code, and see your webpage!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "task: str = \"\"\"\\\n",
     "\n",
-    "A website about cars.\n",
+    "A website about video games, complete with a store, blog etc.\n",
     "\n",
     "\"\"\"\n",
+    "# task: str = \"A website about cars.\"\n",
     "# task: str = \"Make a website about coffee.\"\n",
-    "# task: str = \"Make a website about animals, such as the zoo or a safari or anything else.\"\n",
+    "# task: str = \"Make a website about animals, such as the zoo or a safari.\"\n",
     "# task: str = \"Make a website related to pizza.\"\n",
     "# task: str = \"Make a website related to cooking.\"\n",
     "# task: str = \"Make a blog post about one of your passions.\"\n",
-    "# task: str = \"Make a useful website for high school students looking to apply to university.\"\n",
-    "# task: str = \"\"\"I want to a website about my favourite games, complete with a store, blog etc.\n",
-    "# My goals are to have interesting content for users to read, a visually appealing website, and a store where users can buy games.\n",
-    "# I want the website to be easy to navigate and look good on mobile devices.\n",
-    "# \"\"\""
+    "# task: str = \"Make a useful website for high school students looking to apply to university.\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,29 +82,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# %pip install -U pyautogen\n",
-    "# %pip install -U openai\n",
-    "\n",
-    "# Maximum number of messages in the chat\n",
-    "MAX_MESSAGES: int = 10"
+    "# %pip install -U openai\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Maximum number of messages in the chat\n",
+    "MAX_MESSAGES: int = 5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import autogen\n",
-    "from openai import OpenAI\n",
+    "import time\n",
     "import base64\n",
-    "from autogen.agentchat import UserProxyAgent, AssistantAgent"
+    "import autogen\n",
+    "from openai import OpenAI, BadRequestError\n",
+    "from random import randint\n",
+    "from autogen.agentchat import UserProxyAgent, AssistantAgent\n"
    ]
   },
   {
@@ -132,12 +134,188 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Shared Configs\n"
+    "## Setup Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI(api_key=apikey)\n",
+    "model = \"dall-e-3\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_image_filename(image_generation_prompt: str) -> str:\n",
+    "    \"\"\"Generate a filename based on the image generation prompt, using OpenAI\"\"\"\n",
+    "    prompt: str = f\"Generate a filename for an image based on the following prompt:\\n```{image_generation_prompt}```\\n\\nFilename: \"\n",
+    "\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant that generates filenames \"\n",
+    "                                          \"for images that were generated using the given prompt.\"},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ],\n",
+    "        max_tokens=20,\n",
+    "        temperature=0.0\n",
+    "    )\n",
+    "\n",
+    "    filename: str = response.choices[0].message.content.strip()\n",
+    "    filename2 = '.'.join(filename.split('.')[:-1])  # Remove any file extension if present\n",
+    "    # Only allow alphanumeric characters, underscores, and dashes in the filename\n",
+    "    filename3 = ''.join(c for c in filename2 if c.isalnum() or c in ('_', '-')).strip()\n",
+    "    assert filename3, \"Filename cannot be empty.\\n\" + \\\n",
+    "                      \"Raw response message: `\" + response.choices[0].message.content + \"`\\n\" + \\\n",
+    "                      \"Filename 1: `\" + filename + \"`\\n\" + \\\n",
+    "                      \"Filename 2: `\" + filename2 + \"`\\n\" + \\\n",
+    "                      \"Filename 3: `\" + filename3 + \"`\"\n",
+    "    filename = filename3\n",
+    "\n",
+    "    number_suffix = 1\n",
+    "    while f\"{filename}_{number_suffix}.png\" in os.listdir(\"generated_images\"):\n",
+    "        number_suffix += 1\n",
+    "\n",
+    "    return f\"{filename}_{number_suffix}.png\"\n",
+    "\n",
+    "\n",
+    "def generate_image(image_generation_prompt: str, filename: str=None) -> str:\n",
+    "    \"\"\"Generate an image based on the prompt\"\"\"\n",
+    "    try:\n",
+    "        response = client.images.generate(prompt=image_generation_prompt,\n",
+    "                                        model=model,\n",
+    "                                        quality=\"standard\",\n",
+    "                                        response_format=\"b64_json\",\n",
+    "                                        size=\"1024x1024\")\n",
+    "    except BadRequestError as e:\n",
+    "        print(f\"Error generating image: {e}\")\n",
+    "        return\n",
+    "    img_data =  response.data[0].b64_json\n",
+    "    img_bytes = base64.b64decode(img_data)\n",
+    "\n",
+    "    if not filename:\n",
+    "        filename = get_image_filename(image_generation_prompt)\n",
+    "\n",
+    "    print(f\"Saving image as: `{filename}`...\")\n",
+    "    with open(os.path.join('generated_images', filename), 'wb') as handler:\n",
+    "        handler.write(img_bytes)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate new images that can be used on the webpage\n",
+    "def get_website_background_image_prompt(task: str) -> str:\n",
+    "    \"\"\"Generate a prompt for the background image of the website\"\"\"\n",
+    "    # prompt: str = f\"Provide a prompt for the background image of a website about:\\n```{task}```\\n\\nPrompt: \"\n",
+    "    prompt: str = f\"What can be shown on the background of a website about:\\n```{task}```\\n\\nPrompt: \"\n",
+    "\n",
+    "    system_prompt: str = \"\"\"\\\n",
+    "You are a helpful assistant that generates prompts for background images\n",
+    "to be displayed on websites. \n",
+    "Ensure that the image is suitable for a website background (i.e. light, scenic, faded, indiscreet, minimalistic, abstract).\n",
+    "The image should not be distracting or detailed, and should complement the website's theme.\n",
+    "Prompts should be descriptive, not contain verbs and about 10-20 words long.\n",
+    "\"\"\"\n",
+    "\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ],\n",
+    "        max_tokens=50,\n",
+    "        temperature=1.5,\n",
+    "        seed=randint(0, 1000000)  # Random seed to force different prompts each time\n",
+    "    )\n",
+    "\n",
+    "    return response.choices[0].message.content.strip()\n",
+    "\n",
+    "\n",
+    "# Background image for the webpage\n",
+    "background_image_prompt: str = get_website_background_image_prompt(task)\n",
+    "print(f\"Background image prompt: {background_image_prompt}\")\n",
+    "generate_image(image_generation_prompt=background_image_prompt, filename='background.png')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate new images that can be used on the webpage\n",
+    "def get_image_generation_prompt(task: str) -> str:\n",
+    "    \"\"\"Create a new image generation prompt for the website\"\"\"\n",
+    "    prompt: str = f\"What image can be shown on a website about:\\n```{task}```\\n\\nPrompt: \"\n",
+    "\n",
+    "    system_prompt: str = \"\"\"\\\n",
+    "You are a helpful assistant that generates prompts for images to be displayed on websites.\n",
+    "Decide on one specific object to describe in the prompt. Be descriptive, exclude verbs and stick to 10-20 words long.\n",
+    "\"\"\"\n",
+    "\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ],\n",
+    "        max_tokens=50,\n",
+    "        temperature=1.6,\n",
+    "        seed=randint(0, 10000000)  # Random seed to force different prompts each time\n",
+    "    )\n",
+    "\n",
+    "    return response.choices[0].message.content.strip()\n",
+    "\n",
+    "\n",
+    "# Generate multiple images for the website\n",
+    "for i in range(10):\n",
+    "    new_image_prompt: str = get_image_generation_prompt(task=task)\n",
+    "    print(f\"Image generation prompt: `{new_image_prompt}`\")\n",
+    "    generate_image(image_generation_prompt=new_image_prompt)\n",
+    "    time.sleep(1)  # Sleep for a second to avoid hitting the rate limit\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find images that can be used\n",
+    "def list_available_images() -> list:\n",
+    "    \"\"\"List all available images.\"\"\"\n",
+    "    default_images = [os.path.join(\"..\", \"images\", image)\n",
+    "                      for image in os.listdir(\"images\")\n",
+    "                      if image.endswith((\".jpg\", \".jpeg\", \".png\"))]\n",
+    "    generate_images = [os.path.join(\"..\", \"generated_images\", image)\n",
+    "                       for image in os.listdir(\"generated_images\")\n",
+    "                       if image.endswith((\".jpg\", \".jpeg\", \".png\"))]\n",
+    "    return default_images + generate_images\n",
+    "\n",
+    "image_filenames = list_available_images()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shared Configs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +448,7 @@
     "        \"config_list\": config_list,\n",
     "        \"cache_seed\": None,\n",
     "        \"temperature\": 0.2,\n",
-    "        \"timeout\": 600,\n",
+    "        \"timeout\": 300,\n",
     "    },\n",
     ")\n"
    ]
@@ -284,54 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "image_prompt = f\"\"\"\\\n",
-    "Light, scenic, background for the website: {task}\n",
-    "\"\"\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "client = OpenAI(\n",
-    "    # This is the default and can be omitted\n",
-    "    api_key=apikey,\n",
-    ")\n",
-    "model = \"dall-e-3\"\n",
-    "\n",
-    " # Generate an image based on the prompt\n",
-    "response = client.images.generate(prompt=image_prompt, model=model,quality=\"standard\", response_format=\"b64_json\", size=\"1024x1024\")\n",
-    "\n",
-    "img_data =  response.data[0].b64_json\n",
-    "img_bytes = base64.b64decode(img_data)\n",
-    "\n",
-    "with open(os.path.join('coding', 'images', 'background.png'), 'wb') as handler:\n",
-    "    handler.write(img_bytes)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find images that can be used\n",
-    "image_filenames = [os.path.join(\"images\", image)\n",
-    "                   for image in os.listdir(os.path.join(\"coding\", \"images\"))\n",
-    "                   if image.endswith((\".jpg\", \".jpeg\", \".png\"))]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,11 +479,11 @@
     "images_list_str = '\\n'.join(image_filenames)\n",
     "if images_list_str:\n",
     "    system_prompt += f\"\"\"\n",
-    "Here are some stock photos that are available for use:\n",
+    "Here are photos that are available for use:\n",
     "{images_list_str}\n",
     "\n",
     "Be selective with the images you use. You do not need to use them at all.\n",
-    "Use the background.png image as the background for the website.\n",
+    "Use the background.png image as the background for the website, with a transparency of 50%.\n",
     "\"\"\""
    ]
   },
@@ -385,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,11 +546,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_webpage_filename(task: str) -> str:\n",
+    "    \"\"\"Generate a filename based on the webpage prompt, using OpenAI\"\"\"\n",
+    "    prompt: str = f\"Provide a filename for a HTML file that was generated using the prompt:\\n```{task}```\\n\\nFilename: \"\n",
+    "\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant that generates filenames \"\n",
+    "                                          \"for HTML files that were generated using the given prompt.\"},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ],\n",
+    "        max_tokens=20,\n",
+    "        temperature=0.0\n",
+    "    )\n",
+    "\n",
+    "    filename: str = response.choices[0].message.content.strip()\n",
+    "    filename = '.'.join(filename.split('.')[:-1])  # Remove any file extension if present\n",
+    "    # Only allow alphanumeric characters, underscores, and dashes in the filename\n",
+    "    filename = ''.join(c for c in filename if c.isalnum() or c in ('_', '-')).strip()\n",
+    "\n",
+    "    number_suffix = 1\n",
+    "    while f\"{filename}_{number_suffix}.html\" in os.listdir(\"output\"):\n",
+    "        number_suffix += 1\n",
+    "\n",
+    "    return f\"{filename}_{number_suffix}.html\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "webpage_path: str = os.path.join(\"coding\", \"my_webpage.html\")\n",
+    "webpage_filename: str = get_webpage_filename(task)\n",
+    "print(f\"Webpage filename: `{webpage_filename}`\")\n",
+    "webpage_path: str = os.path.join(\"output\", webpage_filename)\n",
     "\n",
     "with open(webpage_path, \"w\") as f:\n",
     "    f.write(webpage_content)\n",
@@ -439,15 +605,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open webpage in browser\n",
-    "import webbrowser\n",
-    "webbrowser.open(webpage_path, new=1)\n",
+    "# Windows: Open webpage in browser\n",
+    "# import webbrowser\n",
+    "# webbrowser.open(webpage_path, new=1)\n",
     "\n",
-    "# Alternate method to open webpage in browser\n",
-    "# import os\n",
-    "# os.system(f\"open {webpage_path}\")\n",
+    "# MacOS: Open webpage in browser\n",
+    "import os\n",
+    "os.system(f\"open {webpage_path}\")\n",
     "\n",
-    "# Alternate method 2 to open webpage in browser\n",
+    "# MacOS: Alternate method to open webpage in browser\n",
     "# import subprocess\n",
     "# subprocess.run([\"open\", webpage_path])\n"
    ]
@@ -464,7 +630,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "autogen_env",
    "language": "python",
    "name": "python3"
   },
@@ -478,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
