Add configuration options for background and site images in Webpage.ipynb

--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -34,6 +34,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ENABLE_BACKGROUND_IMAGE: bool = False\n",
+    "\n",
+    "ENABLE_SITE_IMAGES: bool = False\n",
+    "NUM_SITE_IMAGES: int = 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -243,9 +255,10 @@
     "\n",
     "\n",
     "# Background image for the webpage\n",
-    "background_image_prompt: str = get_website_background_image_prompt(task)\n",
-    "print(f\"Background image prompt: {background_image_prompt}\")\n",
-    "generate_image(image_generation_prompt=background_image_prompt, filename='background.png')\n"
+    "if ENABLE_BACKGROUND_IMAGE:\n",
+    "    background_image_prompt: str = get_website_background_image_prompt(task)\n",
+    "    print(f\"Background image prompt: {background_image_prompt}\")\n",
+    "    generate_image(image_generation_prompt=background_image_prompt, filename='background.png')\n"
    ]
   },
   {
@@ -279,11 +292,12 @@
     "\n",
     "\n",
     "# Generate multiple images for the website\n",
-    "for i in range(10):\n",
-    "    new_image_prompt: str = get_image_generation_prompt(task=task)\n",
-    "    print(f\"Image generation prompt: `{new_image_prompt}`\")\n",
-    "    generate_image(image_generation_prompt=new_image_prompt)\n",
-    "    time.sleep(1)  # Sleep for a second to avoid hitting the rate limit\n"
+    "if ENABLE_SITE_IMAGES:\n",
+    "    for i in range(NUM_SITE_IMAGES):\n",
+    "        new_image_prompt: str = get_image_generation_prompt(task=task)\n",
+    "        print(f\"Image generation prompt: `{new_image_prompt}`\")\n",
+    "        generate_image(image_generation_prompt=new_image_prompt)\n",
+    "        time.sleep(1)  # Sleep for a second to avoid hitting the rate limit\n"
    ]
   },
   {
@@ -483,8 +497,10 @@
     "{images_list_str}\n",
     "\n",
     "Be selective with the images you use. You do not need to use them at all.\n",
-    "Use the background.png image as the background for the website, with a transparency of 50%.\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "    \n",
+    "if ENABLE_BACKGROUND_IMAGE:\n",
+    "    system_prompt += \"\\nUse the background.png image as the background for the website, with a transparency of 50%.\"\n"
    ]
   },
   {
@@ -606,12 +622,12 @@
    "outputs": [],
    "source": [
     "# Windows: Open webpage in browser\n",
-    "# import webbrowser\n",
-    "# webbrowser.open(webpage_path, new=1)\n",
+    "import webbrowser\n",
+    "webbrowser.open(webpage_path, new=1)\n",
     "\n",
     "# MacOS: Open webpage in browser\n",
-    "import os\n",
-    "os.system(f\"open {webpage_path}\")\n",
+    "# import os\n",
+    "# os.system(f\"open {webpage_path}\")\n",
     "\n",
     "# MacOS: Alternate method to open webpage in browser\n",
     "# import subprocess\n",
